--- a/Mr Robot/README
+++ b/Mr Robot/README
@@ -1,1 +1,3 @@
+Hello friend, hello friend.
 
+This `Mr Robot` inspired box explores methods in how a web-hosting platform and how to exploit them to gain reverse shell access.  This room was a fresh twist with the subtle queues from the Mr Robot show, to the methods used with exploiting the website.  This is my walkthrough on how I completed it. 
